<resources>
    <string name="app_name">PhoneBook</string>
    <string name="add_phone">Add\nphone</string>
    <string name="search_phone">Find\nphone</string>
    <string name="name">Name</string>
    <string name="phone">Telephone</string>
    <string name="space" />
    <string name="add_person">Add</string>
    <string name="save_person">Save</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="search_person">Search by name</string>
    <string name="search">Search</string>
    <string name="zero_phones_quantity">There are no entries in the phone book</string>
    <string name="chosen_quantity">Chosen</string>
    <string name="phones_quantity">All entries (%1$d)</string>
    <string name="last_phones">Last</string>
    <string name="empty_fields">Not all fields are filled!</string>
    <string name="person_exist">This person is already in the phone book!</string>
    <string name="person_phone_exist">This person and this number are already in the phone book!</string>
    <string name="record_created">Entry (%1$s, %2$s) successfully added!</string>
    <string name="record_changed">Entry (%1$s, %2$s) successfully changed!</string>
    <string name="record_removed">Entry (%1$s, %2$s) successfully deleted!</string>
    <string name="zero_person_phones">No entries for %1$s</string>
    <string name="back">Back</string>
    <string name="edit_entry">Edit entry</string>
    <string name="delete_entry">Delete entry</string>
    <string name="call">Call</string>
    <string name="empty_name_field">The field is not filled!</string>
    <string name="request_results">Search results for the query «%1$s»:</string>
    <string name="entries">All entries:</string>
    <string name="remove_entry_title">Delete entry</string>
    <string name="remove_entry_message">Delete entry\n%1$s - %2$s ?</string>
    <string name="yes">Yes</string>
    <string name="no">Not</string>
    <string name="chosen">Chosen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>