<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/default_margin"
    android:background="@color/primary_lilac">

    <TableRow
        android:layout_marginTop="@dimen/default_margin">

    <ImageButton
        android:id="@+id/edit_button"
        style="@style/recyclerview_button_style"
        android:background="@drawable/ic_edit_button"
        android:contentDescription="@string/edit_entry" />

    <ImageButton
        android:id="@+id/delete_button"
        style="@style/recyclerview_button_style"
        android:background="@drawable/ic_delete_button"
        android:contentDescription="@string/delete_entry" />

    <TextView
        android:id="@+id/person"
        style="@style/recyclerview_label_style"
        android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin">

        <ImageButton
            android:id="@+id/choosen_button"
            style="@style/recyclerview_button_style"
            android:background="@drawable/ic_star_off_button"
            android:contentDescription="@string/chosen" />

        <ImageButton
            android:id="@+id/call_button"
            style="@style/recyclerview_button_style"
            android:background="@drawable/ic_call_button"
            android:contentDescription="@string/call" />

        <TextView
            android:id="@+id/telephones"
            style="@style/recyclerview_label_style" />
    </TableRow>
</TableLayout>