<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- View отображения количества телефонов -->
        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:text="@string/peoples_in_phone_book"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <!-- Кнопки перехода между Activity -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/go_to_add_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/light_green"
                android:enabled="true"
                android:gravity="center"
                android:text="@string/add_phone"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <View
                android:id="@+id/divider"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/go_to_main_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/light_lilac"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/search_phone"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>

        <!-- Форма ввода -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_lilac"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/search_person"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:background="@color/white"
                android:ems="10"
                android:importantForAutofill="no"
                android:hint="@string/space"
                android:inputType="textPersonName"
                android:textSize="24sp" />
        </LinearLayout>

        <!-- Форма уведомлений -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_lilac"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="20dp"
                android:text="@string/space"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </RelativeLayout>

        <!-- Кнопка искать -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/light_lilac"
            android:gravity="center|top"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:background="@color/ultra_light_lilac"
                android:enabled="true"
                android:padding="10dp"
                android:text="@string/search"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>